@startuml PlantEx1
' from https://plantuml.com/state-diagram
scale 350 width
[*] --> NotShooting

state NotShooting {
  [*] -> Idle
  Idle --> Configuring : EvConfig
  Configuring --> Idle : EvConfig
}

state Configuring {
  [*] -> NewValueSelection
  NewValueSelection --> NewValuePreview : EvNewValue
  NewValuePreview --> NewValueSelection : EvNewValueRejected
  NewValuePreview --> NewValueSelection : EvNewValueSaved

  state NewValuePreview {
    [*] -> State1
    State1 -> State2 : Ev2 / do_blah();
  }
}

' Test below event consume for https://github.com/StateSmith/StateSmith/issues/355
Idle: Ev4 /

State1: enter / {\n  doStuff();\n  doEvenMore();\n  x++;y++;\n}

' The below is meant to test https://github.com/StateSmith/StateSmith/issues/337
/'! $CONFIG : toml
[RenderConfig.JavaScript]
ClassCode = "blah blah"
ExtendsSuperClass = "SomeUserClass"
UseExportOnClass = true

[SmRunnerSettings.simulation]
lowerDiagramDetail = true
'/

@enduml
